--- a/index.html
+++ b/index.html
@@ -2,9 +2,8 @@
 <html lang="en">
 
 <head>
-  <title>devfolio</title>
+  <title>Shubham</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" href="favicon.png" type="image/x-icon">
   <link rel="stylesheet" href="css/main.bundle.css">
   <script src="https://kit.fontawesome.com/4e5a72c756.js"></script>
 </head>
@@ -109,7 +108,7 @@
         </div>
       </div>
     </div>
-    <div class="card">
+    <div class="card card-gap">
       <div class="card-content">
         <div class="media">
           <div class="media-left">
@@ -129,7 +128,7 @@
         </div>
       </div>
     </div>
-    <div class="card">
+    <div class="card card-gap">
       <div class="card-content">
         <div class="media">
           <div class="media-left">
@@ -213,7 +212,7 @@
       <nav class="level">
           <div class="level-item has-text-centered">
             <div>
-              <a href="https://github.com/mmacneil" class="icon is-large">
+              <a href="https://github.com/ror-shubham" class="icon is-large">
                 <i class="fab fa-2x fa-github"></i>
               </a>
               <p class="heading"><a href="https://github.com/ror-shubham">github.com/ror-shubham</a></p>
@@ -340,10 +339,6 @@
 
   <footer class="footer">
     <div class="content has-text-centered">
-      <p>
-          <a href="https://github.com/mmacneil/devfolio" target="_blank" class="icon has-text-primary">
-             <i class="fab fa-github"></i> <strong>devfolio</strong></a>
-      </p>
     </div>
   </footer>
 
