--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       <div class="level">
         <div class="level-item has-text-centered">
           <figure class="image is-128x128">
-            <img class="is-rounded" src="img/me-big.jpeg">
+            <img class="is-rounded" src="img/shubh.jpg">
           </figure>
         </div>
       </div>
