--- a/index.html
+++ b/index.html
@@ -80,11 +80,24 @@
           </div>
         </div>
         <div class="content">
-          Ape Unit works on the application side of 'Aeternity Blockchain'.
-          I worked majorly on an app named 'Blockchain-Explorer'. It is a web-app which
-          lets a user dive into 'Aeternity-Blockchain'and look the for transactions, blocks
-          mined, etc. Followed agile methodology. Stack Used: VueJS, SCSS, HTML. Link: https://explorer.aepps.com|https://github.com/aeternity/aepp-blockchain- explorer
-        </div>
+          <li>
+            Ape Unit works on the application side of 'Aeternity Blockchain'.
+          </li>
+          <li>
+            I worked majorly on an app named 'Blockchain-Explorer'. It is a web-app which
+            lets a user dive into 'Aeternity-Blockchain'and look the for transactions, blocks mined, etc.
+          </li>
+          <li>
+            Followed agile methodology.
+          </li>
+
+          <li>
+            Stack Used: VueJS, SCSS, HTML.
+          </li>
+          <li>
+            Link: <a href="https://explorer.aepps.com"> https://explorer.aepps.com</a> | <a href="https://github.com/aeternity/aepp-blockchain-explorer">https://github.com/aeternity/aepp-blockchain-explorer</a>
+          </li>
+            </div>
       </div>
     </div>
     <div class="card card-gap">
@@ -102,9 +115,17 @@
           </div>
         </div>
         <div class="content">
-          Our team of two developers developed the front-end of the website for
-          Faculty360 (a faculty recruitment platform)
-          Stack used: HTML, CSS, Bootstrap, Javascript
+          <li>
+            Our team of two developers developed the front-end of the website for
+            Faculty360 (a faculty recruitment platform)
+          </li>
+          <li>
+            Stack used: HTML, CSS, Bootstrap, Javascript
+          </li>
+          <li>
+            Link: <a href="https://faculty360.com">https://faculty360.com</a>
+          </li>
+
         </div>
       </div>
     </div>
@@ -123,8 +144,13 @@
           </div>
         </div>
         <div class="content">
-          Developed a web app named Repricer which notified the user via SMS if an item
-          was available in a given price/ condition range on any online marketplaces (eBay, Amazon, Discogs). Stack used: Flask, ReactJS, MySQL HTML, CSS
+          <li>
+            Developed a web app named Repricer which notified the user via SMS if an item was available in a given price/ condition range on any online marketplaces (eBay, Amazon, Discogs).
+          </li>
+          <li>
+            Stack used: Flask, ReactJS, MySQL HTML, CSS
+          </li>
+
         </div>
       </div>
     </div>
@@ -143,9 +169,15 @@
           </div>
         </div>
         <div class="content">
-          Worked on implementing an inventory management solution for online
-          marketplaces, for a business. The work involved writing scripts using APIs to
-          automate tasks. Stack used: Python, MySQL
+          <li>
+            Worked on implementing an inventory management solution for online
+            marketplaces, for a business. The work involved writing scripts using APIs to
+            automate tasks.
+          </li>
+          <li>
+            Stack used: Python, MySQL
+          </li>
+
         </div>
       </div>
     </div>
