--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
             Stack Used: VueJS, ReactJS, SCSS, HTML.
           </li>
           <li>
-            Links: <a href="https://explorer.aepps.com"> https://explorer.aepps.com</a> | <a href="https://github.com/aeternity/aepp-blockchain-explorer">https://github.com/aeternity/aepp-blockchain-explorer</a>
+            Links: <a href="https://web.archive.org/web/20230608172514/https://explorer.aepps.com/"> https://explorer.aepps.com (web archive)</a> | <a href="https://github.com/aeternity/aepp-blockchain-explorer">https://github.com/aeternity/aepp-blockchain-explorer</a>
           </li>
         </div>
       </div>
@@ -213,7 +213,7 @@
             Stack used: ReactJS, Javascript, HTML, CSS
           </li>
           <li>
-            Link: <a href="http://transformnow.in/">http://transformnow.in/</a>
+            Link: <a href="https://web.archive.org/web/20180613053713/https://www.transformnow.in/">http://transformnow.in/ (web archive)</a>
           </li>
         </div>
       </div>
@@ -246,7 +246,7 @@
             Stack used: HTML, CSS, Bootstrap, Javascript
           </li>
           <li>
-            Link: <a href="https://faculty360.com">https://faculty360.com</a>
+            Link: <a href="https://web.archive.org/web/20190626102938/https://www.faculty360.com/">https://faculty360.com (web archive)</a>
           </li>
 
         </div>
