--- a/index.html
+++ b/index.html
@@ -96,6 +96,9 @@
           <li>
             Key Technologies: ReactJS, TypeScript, GraphQL, Apollo, Django, Python, Hive, Hadoop, PySpark, Amazon SES, Jinja2.
           </li>
+          <li>
+            Link: <a href="https://6sense.com/"> 6sense.com/ </a>
+          </li>
         </div>
       </div>
     </div>
