--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
             Led frontend development of Sales Dashboards, building the app from scratch using ReactJS, JavaScript, GraphQL, and Apollo; responsible for architecture, CI/CD setup, and reusable component library.
           </li>
           <li>
-            Architected and developed the merged Sales Intelligence app after Slintel acquisition; introduced TypeScript migration, new UI/UX design, and scalable frontend practices, contributing to $20M+ in revenue.
+            Was part of architecture team for the merged Sales Intelligence app after Slintel acquisition; introduced TypeScript migration, new UI/UX design, and scalable frontend practices. The app is now contributing $20M+/year in revenue.
           </li>
           <li>
             Designed and owned the full stack for Sales Intelligence Alerts, delivering 90,000+ customized alerts daily using PySpark, Amazon SES, and responsive email templates optimized for native clients like Outlook.
