--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
             Designed and owned the full stack for Sales Intelligence Alerts, delivering 90,000+ customized alerts daily using PySpark, Amazon SES, and responsive email templates optimized for native clients like Outlook.
           </li>
           <li>
-            Built backend APIs for Salesloft iFrame integration with Sales Intelligence CRM using Django and GraphQL.
+            Built backend APIs for Salesloft iFrame integration with Sales Intelligence using Django and GraphQL.
           </li>
           <li>
             Part of 6-member SI Tech Team responsible for production support (PagerDuty), SLA compliance, backend optimization, query tuning, security patching, and maintaining big data pipelines with Hive, Hadoop, and PySpark.
