--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
               Shubham
             </h1>
             <h2 class="subtitle">
-              ReactJS | VueJS | Javascript Developer | IIT Roorkee '19
+              Django | Python | Hadoop | Spark | ReactJS | Javascript Developer | IIT Roorkee '19
             </h2>
           </div>
         </div>
