--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
         </div>
         <div class="content">
           <li>
-            <a href="http://transformnow.in/">TransformNow</a> is product helping people eat healthy, planning their diets, helping them with ingredients and much more.
+            TransformNow is product helping people eat healthy, planning their diets, helping them with ingredients and much more.
           </li>
           <li>
             Developed the PWA from scratch.
